fix : Anti Flicker frames & fix nav bar links

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -49,6 +49,7 @@
 @layer base {
   html {
     background-color: var(--background);
+    scroll-behavior: smooth;
   }
   body {
     background-color: transparent;
